--- a/.env.server
+++ b/.env.server
@@ -7,8 +7,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sii_educomser
-DB_USERNAME=marce
-DB_PASSWORD=sesamo123
+DB_USERNAME=root
+DB_PASSWORD=''
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
